--- a/.github/workflows/env_var_printer.yml
+++ b/.github/workflows/env_var_printer.yml
@@ -18,9 +18,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set environment
-        run: echo "ENV_VAR=${{ secrets.ENV_VAR }}" >> $GITHUB_ENV
+        run: echo "ENV_VAR=${{ vars.ENV_VAR }}" >> $GITHUB_ENV
         env:
-          ENV_VAR: ${{ secrets.ENV_VAR }}
+          ENV_VAR: ${{ vars.ENV_VAR }}
 
       - name: Print ENV_VAR for ${{ matrix.environment }}
         run: echo "The value of ENV_VAR for ${{ matrix.environment }} is $ENV_VAR"
