--- a/.github/workflows/env_var_printer.yml
+++ b/.github/workflows/env_var_printer.yml
@@ -1,45 +1,59 @@
-name: Print ENV_VAR for Environments
+name: PR Deployments
 
 on:
-  push:
-    branches:
-      - master
-      - dev*
   pull_request:
+    types: [opened, synchronize, reopened]
+  push:
     branches:
       - master
 
 jobs:
-  dev_deployment:
-    name: Deployment to Dev
-    if: github.event_name == 'push' && github.ref == 'refs/heads/dev'
+  deploy_to_dev:
+    if: github.event_name == 'pull_request'
+    name: Deploy PR to Dev
     runs-on: ubuntu-latest
     environment: dev
-
-    # strategy:
-    #   matrix:
-    #     environment: [dev, prod]
-
     steps:
       - name: Check out code
         uses: actions/checkout@v3
-
       - name: Set environment
         run: echo "ENV_VAR=${{ vars.ENV_VAR }}" >> $GITHUB_ENV
         env:
           ENV_VAR: ${{ vars.ENV_VAR }}
-  
-  prod_deployment:
-    name: Deployment to Prod
+      - name: Print ENV_VAR for Dev
+        run: echo "The value of ENV_VAR for dev is $ENV_VAR"
+        env:
+          ENV_VAR: ${{ vars.ENV_VAR }}
+      - name: Package build folder
+        run: |
+          tar -czf build.tar.gz build
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-artifact-${{ github.job }}
+          path: build.tar.gz
+
+  deploy_to_prod:
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    name: Deploy to Prod
     runs-on: ubuntu-latest
     environment: prod
-
     steps:
       - name: Check out code
         uses: actions/checkout@v3
-
       - name: Set environment
         run: echo "ENV_VAR=${{ vars.ENV_VAR }}" >> $GITHUB_ENV
         env:
           ENV_VAR: ${{ vars.ENV_VAR }}
+      - name: Print ENV_VAR for Prod
+        run: echo "The value of ENV_VAR for prod is $ENV_VAR"
+        env:
+          ENV_VAR: ${{ vars.ENV_VAR }}
+      - name: Package build folder
+        run: |
+          tar -czf build.tar.gz build
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-artifact-${{ github.job }}
+          path: build.tar.gz
