Add release creation step to Dev deployment workflow

--- a/.github/workflows/env_var_printer.yml
+++ b/.github/workflows/env_var_printer.yml
@@ -32,6 +32,14 @@ jobs:
         with:
           name: build-artifact-${{ github.job }}
           path: build.tar.gz
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: v${{ github.run_number }}
+          name: Release v${{ github.run_number }}
+          body: |
+            Automated release for run ${{ github.run_number }}
+          files: build.tar.gz
 
   deploy_to_prod:
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
@@ -60,6 +68,5 @@ jobs:
           body: |
             Automated release for run ${{ github.run_number }}
           files: build.tar.gz
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       
